# Symphony

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile.api  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  responsible-ai.md
dashboard/: .env.local.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: AgentGraph.tsx  BenchmarkChart.tsx  CollaborativeGrid.tsx  ConflictGraph.tsx  DisasterMap.tsx  LedgerReplay.tsx  NavBar.tsx  StubView.tsx  icons.tsx
dashboard/hooks/: useSimStream.ts
dashboard/lib/: api.ts  colors.ts  types.ts
docs/: architecture.md  demo-script.md  self-audit.md  submission-checklist.md
infra/alibaba-cloud/: DEPLOY_RUNBOOK.md  deployment-proof-checklist.md
scripts/: budget_adherence.py  demo_run.py
symphony/: __init__.py  cli.py  config.py  models.py
symphony/agents/: __init__.py  base_agent.py  comms_agent.py  coordinator.py  finance_agent.py  logistics_agent.py  medical_agent.py  prompts.py  sar_agent.py
symphony/api/: __init__.py  app.py  schemas.py  sse.py  state.py
symphony/benchmark/: __init__.py  metrics.py  run_benchmark.py  single_agent_baseline.py  token_counter.py
symphony/blackboard/: __init__.py  (+4 more)
tests/: test_abstention.py  test_adapters.py  test_agents.py  test_api.py  test_benchmark.py  test_conflict_graph.py  test_determinism.py  test_escalation_threshold.py  test_mock_provider.py  test_parliament.py  test_simulator.py  test_veto.py
(+36 files in other folders)
