[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "symphony"
version = "0.1.0"
description = "Symphony — a multi-agent crisis-response society built on the Parliament Protocol"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
llm = ["openai>=1.30"]
graph = ["neo4j>=5.20"]
bus = ["kafka-python>=2.0"]
cloud = ["tablestore>=5.4"]
api = ["fastapi>=0.111", "uvicorn[standard]>=0.30", "sse-starlette>=2.1"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
symphony = "symphony.cli:main"

[tool.setuptools.packages.find]
include = ["symphony*"]

[tool.setuptools.package-data]
symphony = ["simulator/scenarios/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
